--- a/src/scss/tijs.scss
+++ b/src/scss/tijs.scss
@@ -26,11 +26,11 @@ $heading2Size: 1.6em;
 $heading3Size: 1.3em;
 $heading4Size: 1.0em;
 
-section.has-light-background {
-  &, h1, h2, h3, h4, h5, h6 {
-    color: #222;
-  }
+// import theme, default of reveal.js
+@import "base";
+
+// footer stuff
+.reveal footer small {
+  font-size: 0.4em;
 }
 
-// import theme, default of reveal.js
-@import "theme";
