--- a/src/scss/tijs.scss
+++ b/src/scss/tijs.scss
@@ -27,6 +27,7 @@ $heading3Size: 1.3em;
 $heading4Size: 1.0em;
 
 // import theme, default of reveal.js
+@import "utilities";
 @import "base";
 
 // footer stuff
