--- a/src/scss/tijs.scss
+++ b/src/scss/tijs.scss
@@ -30,6 +30,10 @@ $heading4Size: 1.0em;
 @import "utilities";
 @import "base";
 
+.reveal h1.smaller {
+  font-size: 2.3em;
+}
+
 // footer stuff
 .reveal footer small {
   font-size: 0.4em;
