Links per topic

--- a/src/scss/tijs.scss
+++ b/src/scss/tijs.scss
@@ -34,6 +34,10 @@ $heading4Size: 1.0em;
   font-size: 2.3em;
 }
 
+.reveal .text-left {
+  text-align: left !important;
+}
+
 // footer stuff
 .reveal footer small {
   font-size: 0.4em;
